force-app/main/default/objects/Exception_Log__c/Exception_Log__c.object-meta.xml
<CustomObject>
    <description>Records errors occurred in generating user during automated chatter group assignment</description>
    <label>Exception Log</label>
    <nameField>
        <label>Exception Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exception_Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>