force-app/main/default/objects/Exception_Log__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact associated with exception</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Exception_Logs</relationshipLabel>
    <relationshipName>Exception_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>