force-app/main/default/objects/Exception_Log__c/fields/Correction_Notes__c.field-meta.xml
<CustomField>
    <fullName>Correction_Notes__c</fullName>
    <description>Notes of correction</description>
    <inlineHelpText>Enter notes related to correction of issue</inlineHelpText>
    <label>Correction Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>