force-app/main/default/objects/Exception_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of exception action</description>
    <inlineHelpText>Enter status of actions for correction of exception</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Reviewed</fullName>
            </value>
            <value>
                <fullName>No Action Taken</fullName>
            </value>
            <value>
                <fullName>Corrected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>